burp box, rotatable bismuth block, fifi spawner

--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.fifimod.poppy_seeds": "Poppy Seeds",
   "item.fifimod.cottage_cheese": "Cottage Cheese",
   "item.fifimod.bowl_of_ccmps": "Bowl of CCMPS",
+  "item.fifimod.music_disc_bidibodi": "Music Disc",
+  "item.fifimod.music_disc_bidibodi.desc": "Kristof Tommer - Bidibodi",
 
   "block.fifimod.bismuth_ore": "Bismuth Ore",
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
