--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -3,6 +3,8 @@
   "item.fifimod.poppy_seeds": "Mák",
   "item.fifimod.cottage_cheese": "Túró",
   "item.fifimod.bowl_of_ccmps": "Túrósgombásmákos",
+  "item.fifimod.music_disc_bidibodi": "Hanglemez",
+  "item.fifimod.music_disc_bidibodi.desc": "Tommer Kristóf - Bidibodi",
 
   "block.fifimod.bismuth_ore": "Bizmutérc",
   "block.fifimod.deepslate_bismuth_ore": "Mélykövi Bizmutérc",
