added fifi spawner

--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -10,6 +10,7 @@
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
   "block.fifimod.bismuth_block": "Bismuth Block",
   "block.fifimod.burpbox": "Burpbox",
+  "block.fifimod.fifi_spawner": "Fifi Spawner",
 
   "itemGroup.fifi_tab": "Fifi Tab",
 
