--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -10,6 +10,7 @@
   "block.fifimod.deepslate_bismuth_ore": "Mélykövi Bizmutérc",
   "block.fifimod.bismuth_block": "Bizmutblokk",
   "block.fifimod.burpbox": "Böfigép",
+  "block.fifimod.fifi_spawner": "Fifi Teremtő",
 
   "itemGroup.fifi_tab": "Fifi Tárgyak",
 
