fifi spawner, amethyst lighter, fifher

--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.fifimod.bowl_of_ccmps": "Bowl of CCMPS",
   "item.fifimod.music_disc_bidibodi": "Music Disc",
   "item.fifimod.music_disc_bidibodi.desc": "Kristof Tommer - Bidibodi",
+  "item.fifimod.amethyst_lighter": "Amethyst Lighter",
+  "item.fifimod.the_fifher": "The Fifher",
 
   "block.fifimod.bismuth_ore": "Bismuth Ore",
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
