--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -5,6 +5,8 @@
   "item.fifimod.bowl_of_ccmps": "Túrósgombásmákos",
   "item.fifimod.music_disc_bidibodi": "Hanglemez",
   "item.fifimod.music_disc_bidibodi.desc": "Tommer Kristóf - Bidibodi",
+  "item.fifimod.amethyst_lighter": "Ametiszt Gyújtó",
+  "item.fifimod.the_fifher": "A Fiffer",
 
   "block.fifimod.bismuth_ore": "Bizmutérc",
   "block.fifimod.deepslate_bismuth_ore": "Mélykövi Bizmutérc",
