fifi entity, potato things, improved hungarian translations

--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -7,12 +7,15 @@
   "item.fifimod.music_disc_bidibodi.desc": "Kristof Tommer - Bidibodi",
   "item.fifimod.amethyst_lighter": "Amethyst Lighter",
   "item.fifimod.the_fifher": "The Fifher",
+  "item.fifimod.peti_item": "Peti Item",
+  "item.fifimod.fifi_spawn_egg": "Fifi Spawn Egg",
 
   "block.fifimod.bismuth_ore": "Bismuth Ore",
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
   "block.fifimod.bismuth_block": "Bismuth Block",
   "block.fifimod.burpbox": "Burpbox",
   "block.fifimod.fifi_spawner": "Fifi Spawner",
+  "block.fifimod.potato_block": "Potato Block",
 
   "itemGroup.fifi_tab": "Fifi Tab",
 
