--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.fifimod.the_fifher": "The Fifher",
   "item.fifimod.peti_item": "Peti Item",
   "item.fifimod.fifi_spawn_egg": "Fifi Spawn Egg",
+  "item.fifimod.bean": "Bean",
 
   "block.fifimod.bismuth_ore": "Bismuth Ore",
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
