--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -9,6 +9,7 @@
   "item.fifimod.the_fifher": "A Fiffer",
   "item.fifimod.peti_item": "Krumplizó",
   "item.fifimod.fifi_spawn_egg": "Fifiidéző tojás",
+  "item.fifimod.bean": "Bab",
 
   "block.fifimod.bismuth_ore": "Bizmutérc",
   "block.fifimod.deepslate_bismuth_ore": "Bizmutérc mélypalában",
