fifi item, balanced tools

--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -33,6 +33,7 @@
   "item.fifimod.steel_chestplate": "Acélmellvért",
   "item.fifimod.steel_leggings": "Acélnadrág",
   "item.fifimod.steel_boots": "Acélcsizma",
+  "item.fifimod.fifi": "Fifi",
 
   "block.fifimod.bismuth_ore": "Bizmutérc",
   "block.fifimod.deepslate_bismuth_ore": "Bizmutérc mélypalában",
