--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -33,6 +33,7 @@
   "item.fifimod.steel_chestplate": "Steel Chestplate",
   "item.fifimod.steel_leggings": "Steel Leggings",
   "item.fifimod.steel_boots": "Steel Boots",
+  "item.fifimod.fifi": "Fifi",
 
   "block.fifimod.bismuth_ore": "Bismuth Ore",
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
