--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -45,11 +45,16 @@
   "block.fifimod.tin_block": "Ónblokk",
   "block.fifimod.bronze_block": "Bronzblokk",
   "block.fifimod.steel_block": "Acélblokk",
-  "block.fifimod.fifi_log": "Fifi fa",
-  "block.fifimod.fifi_wood": "Fifi fa",
-  "block.fifimod.stripped_fifi_log": "Vágott fifi fa",
-  "block.fifimod.stripped_fifi_wood": "Vágott fifi fa",
+  "block.fifimod.fifi_log": "Fifi rönk",
+  "block.fifimod.fifi_wood": "Fifi fablokk",
+  "block.fifimod.stripped_fifi_log": "Kérgezett fifi rönk",
+  "block.fifimod.stripped_fifi_wood": "Kérgezett fifi fablokk",
+  "block.fifimod.fifi_leaves": "Fifi levelek",
   "block.fifimod.fifi_planks": "Fifi deszka",
+  "block.fifimod.fifi_stairs": "Fifi lépcső",
+  "block.fifimod.fifi_slab": "Fifi lap",
+  "block.fifimod.fifi_fence": "Fifi kerítés",
+  "block.fifimod.fifi_fence_gate": "Fifi kapu",
 
   "itemGroup.fifi_tab": "Fifi cuccocskák",
 
