--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -34,6 +34,7 @@
   "item.fifimod.steel_leggings": "Steel Leggings",
   "item.fifimod.steel_boots": "Steel Boots",
   "item.fifimod.fifi": "Fifi",
+  "item.fifimod.oxidized_copper_ingot": "Oxidized Copper Ingot",
 
   "block.fifimod.bismuth_ore": "Bismuth Ore",
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
@@ -56,7 +57,8 @@
   "block.fifimod.fifi_fence": "Fifi Fence",
   "block.fifimod.fifi_fence_gate": "Fifi Fence Gate",
 
-  "itemGroup.fifi_tab": "Fifi Tab",
+  "itemGroup.fifi_tab": "Fifi things",
+  "itemGroup.pethings_tab": "Pethings",
 
   "sounds.fifimod.burp": "Burp Sound"
 }
