--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -41,6 +41,7 @@
   "item.fifimod.pig_iron_leggings": "Nyersvas nadrág",
   "item.fifimod.pig_iron_boots": "Nyersvas csizma",
   "item.fifimod.pig_iron_sword": "Nyersvas kard",
+  "item.fifimod.fifhrany_seeds": "Fifráni magok",
 
   "block.fifimod.bismuth_ore": "Bizmutérc",
   "block.fifimod.deepslate_bismuth_ore": "Bizmutérc mélypalában",
@@ -62,6 +63,7 @@
   "block.fifimod.fifi_slab": "Fifi lap",
   "block.fifimod.fifi_fence": "Fifi kerítés",
   "block.fifimod.fifi_fence_gate": "Fifi kapu",
+  "block.fifimod.fifhrany": "Fifráni",
 
   "itemGroup.fifi_tab": "Fifi cuccocskák",
   "itemGroup.pethings_tab": "Peti cuccai",
