--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -41,12 +41,19 @@
   "item.fifimod.pig_iron_leggings": "Pig Iron Leggings",
   "item.fifimod.pig_iron_boots": "Pig Iron Boots",
   "item.fifimod.pig_iron_sword": "Pig Iron Sword",
+  "item.fifimod.pig_iron_shovel": "Pig Iron Shovel",
+  "item.fifimod.pig_iron_axe": "Pig Iron Axe",
+  "item.fifimod.pig_iron_hoe": "Pig Iron Hoe",
+  "item.fifimod.pig_iron_pickaxe": "Pig Iron Pickaxe",
   "item.fifimod.fifhrany_seeds": "Fifhrany Seeds",
   "item.fifimod.fifi_sword": "Fifi Sword",
   "item.fifimod.fifi_shovel": "Fifi Shovel",
   "item.fifimod.fifi_axe": "Fifi Axe",
   "item.fifimod.fifi_hoe": "Fifi Hoe",
   "item.fifimod.fifi_pickaxe": "Fifi Pickaxe",
+  "item.fifimod.squid_rings": "Squid Rings",
+  "item.fifimod.cooked_squid_rings": "Cooked Squid Rings",
+  "item.fifimod.ash": "Ash",
 
   "block.fifimod.bismuth_ore": "Bismuth Ore",
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
@@ -69,6 +76,8 @@
   "block.fifimod.fifi_fence": "Fifi Fence",
   "block.fifimod.fifi_fence_gate": "Fifi Fence Gate",
   "block.fifimod.fifhrany": "Fifhrany",
+  "block.fifimod.fifi_sapling": "Fifi Sapling",
+  "block.fifimod.ash_block": "Ash Block",
 
   "itemGroup.fifi_tab": "Fifi Things",
   "itemGroup.pethings_tab": "Pethings",
