--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -41,12 +41,19 @@
   "item.fifimod.pig_iron_leggings": "Nyersvas nadrág",
   "item.fifimod.pig_iron_boots": "Nyersvas csizma",
   "item.fifimod.pig_iron_sword": "Nyersvas kard",
+  "item.fifimod.pig_iron_shovel": "Nyersvas ásó",
+  "item.fifimod.pig_iron_axe": "Nyersvas balta",
+  "item.fifimod.pig_iron_hoe": "Nyersvas kapa",
+  "item.fifimod.pig_iron_pickaxe": "Nyersvas csákány",
   "item.fifimod.fifhrany_seeds": "Fifráni magok",
   "item.fifimod.fifi_sword": "Fifikard",
   "item.fifimod.fifi_shovel": "Fifiásó",
   "item.fifimod.fifi_axe": "Fifibalta",
   "item.fifimod.fifi_hoe": "Fifikasza",
   "item.fifimod.fifi_pickaxe": "Fificsákány",
+  "item.fifimod.squid_rings": "Tintahal karikák",
+  "item.fifimod.cooked_squid_rings": "Sült tintahal karikák",
+  "item.fifimod.ash": "Hamu",
 
   "block.fifimod.bismuth_ore": "Bizmutérc",
   "block.fifimod.deepslate_bismuth_ore": "Bizmutérc mélypalában",
@@ -69,6 +76,8 @@
   "block.fifimod.fifi_fence": "Fifi kerítés",
   "block.fifimod.fifi_fence_gate": "Fifi kapu",
   "block.fifimod.fifhrany": "Fifráni",
+  "block.fifimod.fifi_sapling": "Fifi csemete",
+  "block.fifimod.ash_block": "Hamublokk",
 
   "itemGroup.fifi_tab": "Fifi cuccocskák",
   "itemGroup.pethings_tab": "Peti cuccai",
