modern bow + trades

--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -54,6 +54,7 @@
   "item.fifimod.squid_rings": "Squid Rings",
   "item.fifimod.cooked_squid_rings": "Cooked Squid Rings",
   "item.fifimod.ash": "Ash",
+  "item.fifimod.modern_bow": "Modern Bow",
 
   "block.fifimod.bismuth_ore": "Bismuth Ore",
   "block.fifimod.deepslate_bismuth_ore": "Deepslate Bismuth Ore",
