--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -54,6 +54,7 @@
   "item.fifimod.squid_rings": "Tintahal karikák",
   "item.fifimod.cooked_squid_rings": "Sült tintahal karikák",
   "item.fifimod.ash": "Hamu",
+  "item.fifimod.modern_bow": "Modern íj",
 
   "block.fifimod.bismuth_ore": "Bizmutérc",
   "block.fifimod.deepslate_bismuth_ore": "Bizmutérc mélypalában",
