--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -83,5 +83,7 @@
   "itemGroup.fifi_tab": "Fifi Things",
   "itemGroup.pethings_tab": "Pethings",
 
-  "sounds.fifimod.burp": "Burp Sound"
+  "sounds.fifimod.burp": "Burp Sound",
+
+  "entity.minecraft.villager.fifimod.peti": "Peti"
 }
