--- a/src/main/resources/assets/fifimod/lang/en_us.json
+++ b/src/main/resources/assets/fifimod/lang/en_us.json
@@ -46,11 +46,14 @@
   "item.fifimod.pig_iron_hoe": "Pig Iron Hoe",
   "item.fifimod.pig_iron_pickaxe": "Pig Iron Pickaxe",
   "item.fifimod.fifhrany_seeds": "Fifhrany Seeds",
+  "item.fifimod.fifi_pickaxe": "Fifi Pickaxe",
   "item.fifimod.fifi_sword": "Fifi Sword",
   "item.fifimod.fifi_shovel": "Fifi Shovel",
   "item.fifimod.fifi_axe": "Fifi Axe",
   "item.fifimod.fifi_hoe": "Fifi Hoe",
-  "item.fifimod.fifi_pickaxe": "Fifi Pickaxe",
+  "item.fifimod.fifi_hood": "Fifi Hood",
+  "item.fifimod.fifi_sweater": "Fifi Sweater",
+  "item.fifimod.fifi_hat": "Fifi Hat",
   "item.fifimod.squid_rings": "Squid Rings",
   "item.fifimod.cooked_squid_rings": "Cooked Squid Rings",
   "item.fifimod.ash": "Ash",
@@ -80,6 +83,7 @@
   "block.fifimod.fifhrany": "Fifhrany",
   "block.fifimod.fifi_sapling": "Fifi Sapling",
   "block.fifimod.ash_block": "Ash Block",
+  "block.fifimod.aquarium": "Aquarium",
 
   "itemGroup.fifi_tab": "Fifi Things",
   "itemGroup.pethings_tab": "Pethings",
