--- a/src/main/resources/assets/fifimod/lang/hu_hu.json
+++ b/src/main/resources/assets/fifimod/lang/hu_hu.json
@@ -52,13 +52,20 @@
   "item.fifimod.fifi_hoe": "Fifikasza",
   "item.fifimod.fifi_pickaxe": "Fificsákány",
   "item.fifimod.fifi_hood": "Fifi kapucni",
-  "item.fifimod.fifi_sweater": "Fifi pulóver",
+  "item.fifimod.fifi_sweater": "Fifi pulcsi",
+  "item.fifimod.fifi_pants": "Fifi pizsinaci",
+  "item.fifimod.fifi_slippers": "Fifi mamusz",
   "item.fifimod.fifi_hat": "Fifi kalap",
-  "item.fifimod.squid_rings": "Tintahal karikák",
-  "item.fifimod.cooked_squid_rings": "Sült tintahal karikák",
+  "item.fifimod.squid_rings": "Tintahal karika",
+  "item.fifimod.cooked_squid_rings": "Sült tintahal karika",
   "item.fifimod.ash": "Hamu",
   "item.fifimod.modern_bow": "Modern íj",
   "item.fifimod.lituly_spawn_egg": "Litülkeidéző tojás",
+  "item.fifimod.betrayer": "Az árulók kardja",
+  "item.fifimod.exiled_sword": "A száműzöttek kardja",
+  "item.fifimod.potatonium_sword": "Krumplikard",
+  "item.fifimod.stormbringer": "Égzengés fakasztó",
+  "item.fifimod.suspender": "A kivégző",
 
   "block.fifimod.bismuth_ore": "Bizmutérc",
   "block.fifimod.deepslate_bismuth_ore": "Bizmutérc mélypalában",
@@ -66,6 +73,7 @@
   "block.fifimod.burpbox": "Böfigép",
   "block.fifimod.fifi_spawner": "Fifiidéző gép",
   "block.fifimod.potato_block": "Krumpliblokk",
+  "block.fifimod.carved_potato_block": "Krumplifej",
   "block.fifimod.tin_ore": "Ónérc",
   "block.fifimod.tin_block": "Ónblokk",
   "block.fifimod.bronze_block": "Bronzblokk",
@@ -87,6 +95,7 @@
 
   "itemGroup.fifi_tab": "Fifi cuccocskák",
   "itemGroup.pethings_tab": "Peti cuccai",
+  "itemGroup.uniqum_swords_tab": "Uniqum kardok",
 
   "sounds.fifimod.burp": "Böfögés hang",
 
